AdmissionPolicies/Policies/Gatekeeper/constraint_service.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
spec:
  match:
    namespaceSelector:
       matchExpressions:
          - key: security-level
            operator: In
            values:
            - high
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
